...
    case adult
    case child

    var label: String {
        switch self {
        case .adult: return "Adult"
        case .child: return "Child"
        }
    }
}

